@@ -1,3 +1,8 @@
+2008-04-20  Ville Vainio <vivainio@gmail.com>
+
+	* Extensions/ipy_lookfor.py: add %lookfor magic command
+	(search docstrings for words) by Pauli Virtanen. Close #245.
+
 2008-04-18  Fernando Perez  <Fernando.Perez@berkeley.edu>
 
 	* IPython/genutils.py (page): apply workaround to curses bug that
